--- a/project/1000zhu/内页/css/animate.css
+++ b/project/1000zhu/内页/css/animate.css
@@ -1,4 +1,44 @@
 /* 动画 */
+@-o-keyframes dod{
+    0%{-o-transform:translateY(5px);}
+    20%{-o-transform:translateY(-5px);}
+    40%{-o-transform:translateY(5px);}
+    60%{-o-transform:translateY(-5px);}
+    80%{-o-transform:translateY(5px);}
+    100%{-o-transform:translateY(0);}
+}
+@-webkit-keyframes dod{
+    0%{-webkit-transform:translateY(5px);}
+    20%{-webkit-transform:translateY(-5px);}
+    40%{-webkit-transform:translateY(5px);}
+    60%{-webkit-transform:translateY(-5px);}
+    80%{-webkit-transform:translateY(5px);}
+    100%{-webkit-transform:translateY(0);}
+}
+@-ms-keyframes dod{
+    0%{-ms-transform:translateY(5px);}
+    20%{-ms-transform:translateY(-5px);}
+    40%{-ms-transform:translateY(5px);}
+    60%{-ms-transform:translateY(-5px);}
+    80%{-ms-transform:translateY(5px);}
+    100%{-ms-transform:translateY(0);}
+}
+@-moz-keyframes dod{
+    0%{-moz-transform:translateY(5px);}
+    20%{-moz-transform:translateY(-5px);}
+    40%{-moz-transform:translateY(5px);}
+    60%{-moz-transform:translateY(-5px);}
+    80%{-moz-transform:translateY(5px);}
+    100%{-moz-transform:translateY(0);}
+}
+@keyframes dod{
+    0%{transform:translateY(5px);}
+    20%{transform:translateY(-5px);}
+    40%{transform:translateY(5px);}
+    60%{transform:translateY(-5px);}
+    80%{transform:translateY(5px);}
+    100%{transform:translateY(0);}
+}
 @keyframes hfli{
 	0%{opacity:0;-moz-transform:rotateY(90deg);-ms-transform:rotateY(90deg);-webkit-transform:rotateY(90deg);-o-transform:rotateY(90deg);transform:rotateY(90deg);}
 	100%{opacity:1;-moz-transform:rotateY(0deg);-ms-transform:rotateY(0deg);-webkit-transform:rotateY(0deg);-o-transform:rotateY(0deg);transform:rotateY(0deg);}
